test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/subscript_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  identifier(arr)
  [
  const int(3)
  ]
  ;
  return
  identifier(arr)
  [
  (
  void
  )
  const int(1)
  ]
  ;
  }
